[gd_scene load_steps=7 format=2]

[ext_resource path="res://Modules/Characters/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Modules/Tutorial/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Modules/UI/Game Interface/Attribute/LaunchBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="Tutorial" type="Node"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 232.0
custom_constants/separation = 320
alignment = 1

[node name="SpaceHelperBtn" type="Button" parent="HBoxContainer"]
margin_left = 41.0
margin_right = 262.0
margin_bottom = 232.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Space"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 582.0
margin_right = 982.0
margin_bottom = 232.0
custom_constants/separation = 64

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_right = 188.0
margin_bottom = 232.0
custom_constants/separation = 64

[node name="LeftHelperBtn" type="Button" parent="HBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 188.0
margin_bottom = 84.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "A"

[node name="LeftHelperBtn2" type="Button" parent="HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 188.0
margin_bottom = 232.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Right"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 400.0
margin_bottom = 232.0
custom_constants/separation = 64

[node name="RightHelperBtn" type="Button" parent="HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 148.0
margin_bottom = 84.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "D"

[node name="RightHelperBtn2" type="Button" parent="HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 148.0
margin_right = 148.0
margin_bottom = 232.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Left"

[node name="GameOverTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 15.0
one_shot = true
autostart = true

[node name="SecondTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_right = 45.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "30"
align = 1

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="LaunchBar" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
